gambling/src/Components/Chat/Chat.module.css
* {
  font-family: "Helvetica Neue", Helvetica, sans-serif;
  font-size: 14px;
  margin: 0;
}
a {
  font-weight: bold;
  color: #fff;
  text-decoration: none;
}
.Container {
  width: 500px;
  height: 700px;
  display: block;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
  background-color: rgba(224, 181, 181, 0.4);
  margin-bottom: 200px;
}
.Container .header {
  padding: 20px 20px 18px 20px;
  background: #5fb471;
  color: #fff;
}
.Container .header h2 {
  font-size: 16px;
  line-height: 15px;
  display: inline-block;
}
.Container .header a {
  display: inline-block;
  float: right;
  background: #3d8b4e;
  font-size: 25px;
  line-height: 20px;
  padding: 3px 6px;
  margin-top: -5px;
  border-radius: 2px;
}
.Container .chatbox,
.enter-message {
  background: #ececec;
  padding: 0 20px;
  color: #a1a1a1;
  position: relative;
}
.Container .chatbox .message-box {
  padding: 18px 0 10px;
  clear: both;
}

.content{
  position: absolute;
  bottom:65px;
}

.Container .entermessage {
  padding: 13px 0px;
  margin-top: 600px;
  margin-left: 0px;
  display: flex;
  flex-direction: row;
  margin-bottom: 100px;
  height: 50px;
}
.Container .entermessage input {
  border: none;
  padding: 10px 12px;
  background: #d3d3d3;
  width: 260px;
  border-radius: 2px;
}
.Container .entermessage .send {
  padding: 15px 25px;
  margin: 0 auto;
  margin-left: 70px;
  background: #6294c2;
  border-radius: 2px;
  float: right;
  font-size: 15px;
}

@media (max-width: 1434px) {
  .Container {
    display: none;
  }
}

